force-app/main/default/objects/FixMyStreetSendCategories__mdt/FixMyStreetSendCategories__mdt.object-meta.xml
<CustomObject>
    <label>FixMyStreetSendCategories</label>
    <pluralLabel>FixMyStreetSendCategories</pluralLabel>
</CustomObject>