force-app/main/default/objects/FixMyStreetSendCategories__mdt/fields/Internal_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Internal_Service_Area__c</fullName>
    <label>Internal Service Area</label>
    <length>25</length>
    <type>Text</type>
</CustomField>