force-app/main/default/objects/FixMyStreetSendCategories__mdt/fields/InternalQueue__c.field-meta.xml
<CustomField>
    <fullName>InternalQueue__c</fullName>
    <label>InternalQueue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>