force-app/main/default/objects/FixMyStreetSendCategories__mdt/fields/Send_To_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Confirm</label>
    <type>Checkbox</type>
</CustomField>