force-app/main/default/objects/FixMyStreetSendCategories__mdt/listViews/Al_Fields.listView-meta.xml
<ListView>
    <fullName>Al_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Service_Code__c</columns>
    <columns>Internal_Service_Area__c</columns>
    <columns>InternalQueue__c</columns>
    <columns>Send_To_Confirm__c</columns>
    <columns>Live__c</columns>
    <filterScope>Everything</filterScope>
    <label>Al Fields</label>
</ListView>